@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/ptexenc/
 ##
-## Copyright (C) 2010, 2011 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2010-2012 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -28,6 +28,10 @@ libptexenc_la_SOURCES = \
 	ptexenc/unicode-jp.h \
 	unicode-jp.c \
 	unicode.c
+
+$(libptexenc_la_OBJECTS): $(KPATHSEA_DEPEND)
+
+libptexenc_la_LIBADD = $(KPATHSEA_LIBS)
 
 ## Rebuild libkpathsea
 @KPATHSEA_RULE@
